<resources>
    <string name="app_name">Rest</string>

    <string name="id_label">The User is:</string>
    <string name="id_value">[id]</string>
    <string name="content_label">Their Role is:</string>
    <string name="content_value">[content]</string>
    <string name="action_help">Help</string>

    <string name="Welcome">Welcome to the Home Network Server App</string>
    <string name="result">Access: </string>
    <string name="result_value"></string>

    <string name="userNameHint">[Enter UserName]</string>
    <string name="passwordHint">[password]</string>
    <string name="ButtonSendUserDetails">Submit</string>

    <string name="ipaddress">[Ip address. e.g. 192.168.0.8]</string>
    <string name="portaddress">[Port No. e.g. 8080]</string>

    <string name="ButtonChooseFolder">Choose file</string>
    <string name="title_activity_display_result">Display Login</string>

    <string name="action_settings">Settings</string>

    <string name="userName_label">The User is:</string>
    <string name="userName_value">[User Name]</string>
    <string name="access">Access:</string>
    <string name="access_value">Access level</string>
    <string name="fileChosen_value"></string>
    <string name="SubmitFile">Upload File</string>


</resources>
