<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">



    <TextView
        android:id="@+id/id_label"
        android:text="@string/id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/content_label"
        android:text="@string/content_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/id_label"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/id_value"
        android:text="@string/id_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/id_label"
        android:layout_marginLeft="50dp" />

    <TextView
        android:id="@+id/content_value"
        android:text="@string/content_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/content_label"
        android:layout_alignLeft="@+id/id_value" />


    <TextView
        android:id="@+id/result"
        android:text="@string/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/result_value"
        android:layout_alignBottom="@+id/result_value"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/result_value"
        android:text="@string/result_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:layout_below="@+id/content_label"
        android:layout_toRightOf="@+id/content_label"
        android:layout_toEndOf="@+id/content_label" />





    <EditText
        android:id="@+id/userName"
        android:layout_height="wrap_content"
        android:hint="@string/userNameHint"
        android:inputType="textPersonName"
        android:layout_width="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/result"
        android:layout_alignStart="@+id/result" />

    <EditText
        android:id="@+id/password"
        android:layout_height="wrap_content"
        android:hint="@string/passwordHint"
        android:inputType="textEmailAddress"
        android:layout_width="wrap_content"
        android:layout_below="@+id/userName"
        android:layout_alignLeft="@+id/userName"
        android:layout_alignStart="@+id/userName"
        android:layout_alignRight="@+id/userName"
        android:layout_alignEnd="@+id/userName" />


    <EditText
        android:id="@+id/ipaddress"
        android:layout_height="wrap_content"
        android:hint="@string/ipaddress"
        android:inputType="textUri"
        android:layout_width="wrap_content"
        android:layout_below="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password" />

    <EditText
        android:id="@+id/portaddress"
        android:layout_height="wrap_content"
        android:hint="@string/portaddress"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_below="@+id/ipaddress"
        android:layout_alignLeft="@+id/ipaddress"
        android:layout_alignStart="@+id/ipaddress" />


    <Button
    android:id="@+id/ButtonSendUserDetails"
    android:layout_height="wrap_content"
    android:text="@string/ButtonSendUserDetails"
    android:onClick="sendUserDetails"
    android:layout_width="wrap_content"
        android:layout_below="@+id/portaddress"
        android:layout_alignRight="@+id/password"
        android:layout_alignEnd="@+id/password"
        android:layout_alignLeft="@+id/portaddress"
        android:layout_alignStart="@+id/portaddress">
</Button>


    <Button
        android:id="@+id/ButtonChooseFolder"
        android:layout_height="wrap_content"
        android:text="@string/ButtonChooseFolder"
        android:onClick="chooseFileButton"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/content_value"
        android:layout_alignEnd="@+id/content_value">
    </Button>

</RelativeLayout>