<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.example.mikiej.rest.DisplayResultActivity">





        <TextView
            android:id="@+id/userName_label"
            android:text="@string/userName_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#ffffffff" />



        <TextView
            android:id="@+id/userName_value"
            android:text="@string/userName_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_toRightOf="@+id/userName_label"
            android:layout_toEndOf="@+id/userName_label"
            android:textColor="#ffffffff" />



        <TextView
            android:id="@+id/access"
            android:text="@string/access"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userName_label"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#ffffffff" />

    <TextView
        android:id="@+id/access_value"
        android:text="@string/access_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName_value"
        android:layout_alignLeft="@+id/userName_value"
        android:layout_alignStart="@+id/userName_value"
        android:textColor="#ffffffff" />

    <ImageView
        android:id="@+id/imageViewer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
         android:layout_below="@+id/access"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="18dp">

    </ImageView>



    <Button
        android:id="@+id/ButtonChooseFolder"
        android:layout_height="wrap_content"
        android:text="@string/ButtonChooseFolder"
        android:layout_width="wrap_content"
        android:layout_weight="0"
        android:layout_alignParentBottom="true">
    </Button>


    <Button
        android:id="@+id/SubmitFile"
        android:layout_height="wrap_content"
        android:text="@string/SubmitFile"
        android:layout_width="wrap_content"
        android:layout_weight="0"
        android:layout_alignTop="@+id/ButtonChooseFolder"
        android:layout_alignRight="@+id/imageViewer"
        android:layout_alignEnd="@+id/imageViewer"
        android:onClick="uploadFile">
    </Button>

</RelativeLayout>
